MOBcombined/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Out_of_Range_Distance_for_POCs_Meters__c</fullName>
        <label>Out of Range Distance for POCs (Meters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_of_Range_Options_for_POCS__c</fullName>
        <label>Out of Range Options for POCS</label>
        <picklist>
            <picklistValues>
                <fullName>Allow visit to start without a reason</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt user to enter reason</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Color__c</fullName>
        <formula>IF(Account_Targets_Count__c =  SAP_Color_Indicator_from_ATP__c, &apos;Green&apos;,&apos;Red&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>IF( INDUS_VOL_CLASS_CD_US__c = &quot;10&quot;, &quot;B&quot;, 
IF( INDUS_VOL_CLASS_CD_US__c = &quot;20&quot;, &quot;U&quot;, 
IF( INDUS_VOL_CLASS_CD_US__c = &quot;30&quot;, &quot;D&quot;, 
IF( INDUS_VOL_CLASS_CD_US__c = &quot;11&quot;, &quot;B1&quot;, 
IF( INDUS_VOL_CLASS_CD_US__c = &quot;12&quot;, &quot;B2&quot;, 
IF( INDUS_VOL_CLASS_CD_US__c = &quot;13&quot;, &quot;BP&quot;, 
&quot;&quot;))))))</formula>
        <inlineHelpText>Values = B, U, D, B1, B2, BP</inlineHelpText>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Program_NM__c</fullName>
        <label>Trade Program NM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_NBR_US__c</fullName>
        <label>Wholesaler Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field displays the wholesaler that services this Retailer</inlineHelpText>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retailers Served</relationshipLabel>
        <relationshipName>Retailer_Wholesaler</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>